[metadata]
name = micro
author = Jordan Pittier
home-page = https://github.com/JordanP/flask-microversions
summary = Flask WebAPP with API microversions
description-file = README.rst
license = Apache-2
classifier =
        Development Status :: 3 - Alpha
        Environment :: Console
        Framework :: Flask
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
keywords =
    flask
    microversions

[files]
packages =
    micro

[pbr]
warnerrors = True
